--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -5,9 +5,9 @@
 
 \pagestyle{plain}
 
-\title{{\normalsize CSCI 572: Computer Networks (Fall 2023)}\\Proposal: Your Project Title}
-\author{team member's names}
-\date{}
+\title{{\normalsize CSCI 572: Computer Networks (Fall 2023)}\\Proposal: Ad-Hoc Messaging App}
+\author{Michael Alvarez, Luke Beukelman, Ben Breisch}
+\date{October 9th 2023}
 
 \begin{document}
 \maketitle
@@ -15,18 +15,40 @@
 \section{Introduction}
 % Motivate the problem;
 % Define/formulate the problem: assumptions, application requirements, goals and non-goals;
+If I want to send a message to my friend in the next room over, it must travel much farther than the distance between us. Messages sent through SMS or Apple's iMessage must travel from the originating device through a series of intermediate infrastructure nodes before reaching the destination device. This is an issue for both latency and network congestion. In an increasingly connected (and congested) world - why bother wasting bandwidth on a message to a nearby device that can be sent directly from peer to peer? We aim to solve this issue by proposing and developing a peer-to-peer messaging app for Android using Wi-Fi Direct for multi-hop ad-hoc networking. Although security is always an issue with wireless communication, that is out of the scope of this project.
 \section{Related work}
    %\item What has been done before?
     %\item How does your solution compare to them?
+    There are some existing apps available for Android and iOS. Many of these apps use Bluetooth
+    https://engage.sinch.com/blog/offline-messaging-apps/ \\
+    https://apps.apple.com/us/app/walkie-talkie-p2p/id1181349764 \\
+    https://ieeexplore.ieee.org/document/9473791 \\
+    https://arxiv.org/abs/1601.00028 \\
+    https://github.com/NaniteFactory/Wifi-Direct-on-Linux \\
+    https://github.com/tigewilliams/WifiDirect
   
 \section{Approach} %(optional)
 %    \item Rationale: Why is it a good idea?
    %     \item Sketch of your approach and design.
+   Wireframe?
+   Network/Explanation Diagram?
 \section{Evaluation Plan}
 %      \item What experiments are you going to run?
    %   \item What criteria and metrics are you going to use to evaluate your solutions?
+   Criteria:
     
 \section{Milestones} %(with dates)
+
+
+\begin{center}
+\begin{tabular}{ |c|c|c| }
+\hline
+ Milestone & Explanation & Due Date \\ \hline
+ cell4 & cell5 & cell6 \\  
+ Final Report & Final report in IEEE conference paper format due & Nov 22, 2023   \\
+ \hline
+\end{tabular}
+\end{center}
 
 \bibliographystyle{plain}
 \bibliography{yourref.bib}
