--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -39,9 +39,59 @@ If I want to send a message to my friend in the next room over, it must travel m
    
 \section{Evaluation Plan}
 %      \item What experiments are you going to run?
+\subsection{Scenarios}
+
+We plan to do all of our evaluation and experimentation on live devices. One of our team members has an android device and we are currently investigating how to emulate more android devices or acquire dummy devices for experimentation. To gain a full picture of our application's performance we plan to test it in the following scenarios:
+
+\begin{itemize}
+    \item Single-hop communication
+    \item Multi-hop communication
+    \item New user event
+    \item Dropping user event
+    \item High pace usage
+    \item File messages
+    \item Low distance
+    \item Maximum distance
+\end{itemize}
+
+The single-hop communication experiments will be performed with two devices which will have a single connection between them. The multi-hop communication experiments will use at least three devices and test the routing capabilities of the app. We will also test how quickly our solution can adapt to topology changes such as users opening the app or closing the app. That in particular is especially important since people are rarely just using a single app continuously. Typical users will flip quickly between several different apps while using their phone or device. Additionally, we will test the impact of high paced usage on network performance. Some users send messages back and forth as fast as their fingers can type and even do that with multiple different contacts. Most messaging apps allow for users to send each other multimedia messages or files such as photos and videos. So that capability will be tested as well. Finally, it is always important to study how the physical environment will impact performance. So we will run these experiments at a close distance range and then push it as high as we can go. All of these scenarios will be combined into an array of experiments that we can use to fully capture the performance of our app.
+
    %   \item What criteria and metrics are you going to use to evaluate your solutions?
-   Criteria:
-    
+\subsection{Metrics}
+
+For each experiment we will record the following metrics:
+\begin{itemize}
+    \item Throughput
+    \item Latency
+    \item Packet loss rate
+\end{itemize}
+The throughput in this case is simply the data transmission rate throughout the whole network. So, all of the messages sent and received over time measured in data per second. The latency has multiple components that will each need to be analyzed individually as well as together. For example, there is latency from route acquisition, processing, potential queuing, transmission, propagation, re-transmission, etc. We will attempt to record as many of the individual components as possible. Finally, the packet loss rate is simply the rate at which a packet transmission fails and a re-transmission is required.
+
+\subsection{Criteria}
+
+There are two key results we are looking for by performing these experiments. The first is comparing our app to other existing solutions. We want to see if our approach of using WiFi-Direct performs better or worse than the typical Bluetooth approach. Furthermore, we want to analyze specific areas and metrics so as to conclude the pros and cons of the different technologies. The second result is if our solution meets the user's needs. Does it have the necessary throughput, latency, and reliability to provide a good experience for the casual user? That result will tell us whether or not our solution is usable and functional for the problem.
+
+The criteria for our first result is fairly straightforward. We will simply compare our recorded metrics directs against the best existing solution we can find. This will allow us to compare and contrast the different approaches directly. In contrast, the criteria for our second result is much less straightforward. There is no benchmark for the minimum performance required on a messaging app. So we will evaluate the app against our own defined criteria of what is needed for a "good user experience".
+
+These soft criteria are as follows:
+\begin{itemize}
+    \item Able to handle constant activity, fast paced messaging between multiple pairs of users.
+    \item Scales to a large number of users, at least 10 in a small area.
+    \item Low latency 
+    \begin{itemize}
+        \item Less than one second for text messages
+        \item Less then ten seconds for files, pictures, or videos
+    \end{itemize}
+    \item Reliable delivery, data gets delivered unless destination is unreachable.
+\end{itemize}
+These are the basic requirements for any messaging app to be useful. If any one of these are missing then the user experience is miserable. 
+A messaging app needs to keep up with even the fastest typer. We can put a character limit to restrict total message size, but that wouldn't stop a user from sending many large messages in quick succession. Therefore, it is important that the app can handle such usage. One speedy user shouldn't be able to cause themselves or other users to experience delay. We will need to find out how fast a person can send out messages at maximum and then use that as a throughput threshold for how fast our app needs to be.
+
+Scalability is the next concern. If users can't send or receive messages in a crowded environment then the app is not very useful. Settings such as a school, apartment complex, or office may have many participating users trying to use the app at once. More participating devices in the network obviously increases the total network bandwidth, but does that increase in bandwidth outpace the increase in required throughput? We don't have the equipment required to test a truly large scale deployment of our app, but we can still analyze the impact of more participating devices. Then by weighing the increase in both bandwidth and throughput, we can estimate how well the application will scale.
+
+Since our app sends messages locally to a destination, rather than traveling through a complex network of infrastructure nodes, users will expect it to be very quick. Therefore, low latency is also a requirement. Nobody likes to wait for something as simple as a message to send. Especially when some conversations are time sensitive. So the text messages themselves should send very quickly, with a small wait required for larger files.
+Finally, messages need to be delivered. When a user sends a message they expect it to actually reach the destination. If that promise isn't upheld then that can cause confusion and frustration amongst users. If the destination is unreachable then the sending user needs to be alerted of this. This is a potential problem for our app as users could be hopping on and off the app at a rapid pace.
+
 \section{Milestones} %(with dates)
 The table below describes the milestones and associated due dates for each.
 \begin{center}
