Added bibliography page

--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -108,7 +108,7 @@ The table below describes the milestones and associated due dates for each.
 \end{center}
 
 \bibliographystyle{plain}
-\bibliography{yourref.bib}
+\bibliography{references.bib}
 
 
 \end{document}
