--- a/refs.bib
+++ b/refs.bib
@@ -1,7 +1,7 @@
 @book{Webster2023linuxmint,
   title  = {linuxmint/warpinator},
   url    = {https://github.com/linuxmint/warpinator},
-  author = {Webster, Michael and Lefebvre, Clement and Angedestenebres and Cobinja and JosephMcc and Tony and H, Pavel and Loison, Benjamin and György, Balló and Wiedemann, Bernhard M. and Rong, Bobby and Dušan Kazik and Thiede, Adam and FriedrichFroebel and Marcelino, Juliano and Laker, Kyle and Zaharid and dogey11 and hduelme},
+  author = {Webster et al.},
   date   = {2023-10-16},
   year   = {2023},
   month  = {10},
@@ -31,4 +31,27 @@
   url     = {https://support.apple.com/guide/iphone/use-airdrop-to-send-items-iphcd8b9f0af/ios},
   title   = {Use AirDrop on iPhone to send items to nearby devices},
   journal = {Apple Support}
+} 
+
+@misc{AppleSupportSecurity,
+  author  = {Apple},
+  url     = {https://support.apple.com/guide/security/airdrop-security-sec2261183f4/web},
+  title   = {AirDrop security},
+  journal = {Apple Support}
+} 
+
+@misc{AndroidDevelopers,
+  author  = {Android Deelopers},
+  url     = {https://developer.android.com/training/beam-files},
+  title   = { Sharing files with NFC},
+  journal = {Android Developers}
+} 
+
+@misc{Cantisano_2022,
+  title   = {Android beam will be removed permanently with the release of Android 14},
+  url     = {https://www.xda-developers.com/android-beam-permanent-removal-android-14/},
+  journal = {XDA Developers},
+  author  = {Cantisano, Timi},
+  year    = {2022},
+  month   = {Sep}
 } 
