--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -18,13 +18,13 @@
 \section{Introduction}
 % Motivate the problem;
 % Define/formulate the problem: assumptions, application requirements, goals and non-goals;
-If someone wants to send a message to a friend nearby, the message must travel much farther than the distance between devices. Messages sent through SMS or Apple's iMessage must travel from the originating device through a series of intermediate infrastructure nodes before reaching the destination device. This causes increased latency and unnecessary network overhead. In an increasingly connected (and congested) world - why bother wasting bandwidth on a message to a nearby device that can be sent directly from peer to peer? We aim to solve this issue by proposing and developing a peer-to-peer messaging app for Android using Wi-Fi Direct for multi-hop ad-hoc networking. An application of this nature has far-reaching applications from messaging and networking at an event r conference to emergency communication during a natural disaster. Although security is always an issue with wireless communication, that is out of the scope of this project. The table below shows some preliminary requirements for this proposed solution.
+If someone wants to send a message to a friend nearby, the message must travel much farther than the distance between devices. Messages sent through SMS or Apple's iMessage must travel from the originating device through a series of intermediate infrastructure nodes before reaching the destination device. This causes increased latency and unnecessary network overhead. In an increasingly connected (and congested) world - why bother wasting bandwidth on a message to a nearby device that can be sent directly from peer to peer? We aim to solve this issue by proposing and developing a peer-to-peer messaging app for Android using Wi-Fi Direct for multi-hop ad-hoc networking. An application of this nature has far-reaching applications from messaging and networking at an event or conference to emergency communication during a natural disaster. Although security is always an issue with wireless communication, that is out of the scope of this project. The table below shows some preliminary requirements for this proposed solution.
 \begin{center}
     \begin{tabular}{| p{0.2\textwidth} | p{0.5\textwidth} |}
         \hline
         Category        & Requirement                                                                                                     \\ \hline
         Networking      & Connections between two devices shall use Wi-Fi Direct using the Android Wi-Fi P2P API                          \\ \hline
-        Networking      & Devices shall provide routing of messages between source and destination nodes using an ad-hoc routing protocol \\ \hline
+        Networking      & Devices shall provide routing of messages between source and destination nodes using a to-be-determined routing protocol. \\ \hline
         Networking      & Devices shall provide acknowledgements when messages are received in order to ensure message delivery           \\ \hline
         User Experience & Users shall be able to send text and file messages                                                              \\ \hline
         User Experience & Latency shall be minimized as much as possible when sending messages (ideally within 1 second)                  \\ \hline
@@ -42,28 +42,25 @@ If someone wants to send a message to a friend nearby, the message must travel m
 
 \subsection{AirDrop}
 
-When it comes to ad hoc networking on mobile devices, AirDrop is probably to most widespread application. It supports sending files to nearby devices, without
-requiring devices to be connected to the same network. AirDrop operates using both wifi and bluetooth \cite{AppleSupport}.
+When it comes to ad hoc networking on mobile devices, AirDrop is probably the most widespread application. It supports sending files to nearby devices, without requiring devices to be connected to the same network. AirDrop operates using both Wi-Fi and Bluetooth \cite{AppleSupport}.
 
 We aim to differ from this product in several regards:
 \begin{enumerate}
     \item We primarily aim to support messaging. Having file sharing as a back end is a possible implementation to build messaging on, but would need to be extended.
     \item AirDrop uses iCloud services in order to authenticate users \cite{AppleSupportSecurity}, and additionally only works on Apple devices. We aim to create a de-centralized version that
           could theoretically be deployed on any platform (although we are only developing the application for Android in the scope of this project).
-    \item AirDrop uses a combination of point-to-point WiFi connections and bluetooth. We aim to only use ad hoc wifi / wifi direct in our implementation. We realize
-          that the technology choice restricts what devices we can connect with (Apple does not support WiFi direct).
+    \item AirDrop uses a combination of point-to-point WiFi connections and bluetooth. We aim to only use Ad-Hoc Wi-Fi / Wi-Fi Direct in our implementation. We realize that the technology choice restricts what devices we can connect with (Apple does not support Wi-Fi direct).
 \end{enumerate}
 
 \subsection{Warpinator}
 
-Warpinator is a file sharing system devloped by the Linux Mint team in order to create an air-drop like file-sharing system for non-apple users  \cite{Webster2023linuxmint}. It operates over
+Warpinator is a file sharing system devloped by the Linux Mint team in order to create an AirDrop like file-sharing system for non-Apple users  \cite{Webster2023linuxmint}. It operates over
 LAN, and supports Android, iOS, Windows, and Linux, and could likely be easily ported to other Unix like systems.
 
 We aim to differ from this product in two regards:
 \begin{enumerate}
     \item As in AirDrop, we primarily aim to support messaging
-    \item Operate using ad hoc networking to support messaging. Warpinator requires a connection to an existing routed network, and can not operate its own ad hoc
-          network.
+    \item Operate using ad-hoc networking to support messaging. Warpinator requires a connection to an existing routed network, and can not operate its own ad-hoc network.
 \end{enumerate}
 
 \subsection{Android Beam}
@@ -81,15 +78,15 @@ We aim to differ from this product in two regards:
 
 \subsection{A Totally Decentralized Document Sharing System for Mobile Ad Hoc Networks}
 This paper  \cite{10.1145/1164783.1164805} presents an application for sharing documents in MANETS. The application presented
-is completely unreliant on any form of centralized server or routing algorith. Documents can be shared in atomic components to different groups
+is completely unreliant on any form of centralized server or routing algorithms. Documents can be shared in atomic components to different groups
 of nodes, and nodes can modify parts of a document, sharing a tree of the modifications. This application achieves a lot of what we are trying to
-do, except with more routing and versioning complexity than we are seeking. Our goal is simple messaging and possible document sharging with nearby
+do, except with more routing and versioning complexity than we are seeking. Our goal is simple messaging and possible document sharing with nearby
 nodes, not necessarily using MANET routing algorithms.
 
 We aim to differ from this product in two regards:
 \begin{enumerate}
     \item Our solution aims to target simple messaging and file sharing, rather than the complex sharing and versioning that the application in the paper presents.
-    \item We don't intend to use complex routing algorithms such as those used in MANETS, our goal is short range communications within the range of a phones WiFi antenna.
+    \item We don't intend to use novel or extremely complex routing algorithms such as those used in MANETS, our goal is short range communications within the range of phone antennas however it may be achieved.
 \end{enumerate}
 
 % There are some existing apps available for Android and iOS. Many of these apps use Bluetooth
@@ -103,11 +100,11 @@ We aim to differ from this product in two regards:
 \section{Approach} %(optional)
 %    \item Rationale: Why is it a good idea?
 %     \item Sketch of your approach and design.
-Mobile app development, especially for Android, has an extremely wide range of resources on the Internet. The Android platform is well supported by the community and we plan to leverage online reousrces for the development of this app. Android provides an existing Wi-Fi Direct library that we will leverage to speed up development. We will develop this app using Android's Studio Software Development Kit in Java. For our mobile app to function properly, we will need mock ups of different pages and screens. In the User Interface / User Experience (UI/UX) industry, these are called wireframes. We have created three wireframes, each showing the sign-in page, nearby users, and the messaging page of the application respectively. The wireframes were created in a free tool called WonderShare and are shown in the image below. These wireframes will guide development of the user interface.\\
+Mobile app development, especially for Android, has an extremely wide range of resources on the Internet. The Android platform is well supported by the community and we plan to leverage online resources for the development of this app. Android provides an existing Wi-Fi Direct library that we will leverage to speed up development. We will develop this app using Android's Studio Software Development Kit in Java. For our mobile app to function properly, we will need mock ups of different pages and screens. In the User Interface / User Experience (UI/UX) industry, these are called wireframes. We have created three wireframes, each showing the sign-in page, nearby users, and the messaging page of the application respectively. The wireframes were created in a free tool called WonderShare and are shown in the image below. These wireframes will guide development of the user interface.\\
 \begin{center}
     \includegraphics[scale=0.5]{wireframe.png} \\
 \end{center}
-Behind the scenes, this application will use a complex set of functions and internal storage structures. Devices will periodically broadcast beacon frames with routing information, tagged with usernames for each device. This technique is essentially a fusion of AODV and DSDV routing. When the app is open on a device, it will listen for these beacon frames and update its routing table accordingly. If a device receives a frame destined for a different host, it will look up the host in its routing table and determine if it is reachable, forwarding the packet along if it is. When a frame is received at the destination host, it will detect errors with a checksum or CRC32 and reply with an ACK. Messages will be limited to 1024 characters in order to cut down on network latency and reduce packet loss. Conversations between users will be stored on the device.
+Behind the scenes, this application will use a complex set of functions and internal storage structures. Devices may periodically broadcast beacon frames with routing information, tagged with usernames for each device. A possible technique could essentially be a fusion of AODV and DSDV routing. When the app is open on a device, it will listen for these beacon frames and update its routing table accordingly. If a device receives a frame destined for a different host, it will look up the host in its routing table and determine if it is reachable, forwarding the packet along if it is. When a frame is received at the destination host, it will detect errors with a checksum or CRC32 and reply with an ACK. Messages will likely be limited to 1024 characters in order to cut down on network latency and reduce packet loss. Conversations between users will be stored on the device.
 
 \section{Evaluation Plan}
 %      \item What experiments are you going to run?
@@ -179,7 +176,6 @@ The table below describes the milestones and associated due dates for each.
     \end{tabular}
 \end{center}
 
-\newpage
 
 \bibliographystyle{plain}
 \bibliography{refs}{}
