Final paper added

--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -89,6 +89,15 @@ We aim to differ from this product in two regards:
     \item We don't intend to use novel or extremely complex routing algorithms such as those used in MANETS, our goal is short range communications within the range of phone antennas however it may be achieved.
 \end{enumerate}
 
+\subsection{Wi-Fi Direct Research - Current Status and Future Perspectives}
+This paper  \cite{WifiDirect} provides an overview of the state of WiFi direct research as of 2017. This doesn't provide an application so
+much as a overview of the network architecture, and the systems in place for device discovery, service discovery, group formation,
+power saving, and security, all of which we anticipate being of some relevance to our implementation of this final project.
+
+The paper also discusses applicationf of WiFi direct, including file transfer and emergency communication, which are directly relevant
+to our end goal. It also discusses briefly the usage of WiFi direct in FireChat, which was an application that
+used wireless mesh networking for peer to peer messaging over bluetooth or WiFi.
+
 % There are some existing apps available for Android and iOS. Many of these apps use Bluetooth
 % https://engage.sinch.com/blog/offline-messaging-apps/ \\
 % https://apps.apple.com/us/app/walkie-talkie-p2p/id1181349764 \\
