--- a/refs.bib
+++ b/refs.bib
@@ -55,3 +55,14 @@
   year    = {2022},
   month   = {Sep}
 } 
+
+@article{WifiDirect,
+author = {Khan, Muhammad Asif and Chérif, Wael and Filali, Fethi and Ridha, Hamila},
+year = {2017},
+month = {06},
+pages = {},
+title = {Wi-Fi Direct Research - Current Status and Future Perspectives},
+volume = {93},
+journal = {Journal of Network and Computer Applications},
+doi = {10.1016/j.jnca.2017.06.004}
+}
