--- a/proposal-template.tex
+++ b/proposal-template.tex
@@ -94,7 +94,7 @@ This paper  \cite{WifiDirect} provides an overview of the state of WiFi direct r
 much as a overview of the network architecture, and the systems in place for device discovery, service discovery, group formation,
 power saving, and security, all of which we anticipate being of some relevance to our implementation of this final project.
 
-The paper also discusses applicationf of WiFi direct, including file transfer and emergency communication, which are directly relevant
+The paper also discusses applications of WiFi direct, including file transfer and emergency communication, which are directly relevant
 to our end goal. It also discusses briefly the usage of WiFi direct in FireChat, which was an application that
 used wireless mesh networking for peer to peer messaging over bluetooth or WiFi.
 
