Set up the skeleton code for WiFi-Direct
Currently it will initialize the WiFiP2pManager and also discover
current peers. Also set up the skeletons for sending data and recieveing
data on the server.

--- a/adhocmessaging/app/src/main/res/values/strings.xml
+++ b/adhocmessaging/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">adhocmessaging</string>
+    <string name="title_activity_wi_fi_direct">WiFiDirectActivity</string>
 </resources>
